// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asana projects basic project 1`] = `
Array [
  Object {
    "model": "tms_Project",
    "record": Object {
      "createdAt": 2023-08-24T15:51:52.758Z,
      "description": "Project Uno notes",
      "name": "Project Uno",
      "source": "Asana",
      "uid": "1205346703408259",
      "updatedAt": 2023-08-24T15:51:52.758Z,
    },
  },
]
`;

exports[`asana sections basic section 1`] = `
Array [
  Object {
    "model": "tms_TaskBoard",
    "record": Object {
      "name": "Sample Section",
      "source": "Asana",
      "uid": "1234567890",
    },
  },
]
`;

exports[`asana sections basic section with project 1`] = `
Array [
  Object {
    "model": "tms_TaskBoard",
    "record": Object {
      "name": "Sample Section",
      "source": "Asana",
      "uid": "1234567890",
    },
  },
  Object {
    "model": "tms_TaskBoardProjectRelationship",
    "record": Object {
      "board": Object {
        "source": "Asana",
        "uid": "1234567890",
      },
      "project": Object {
        "source": "Asana",
        "uid": "9876543210",
      },
    },
  },
]
`;

exports[`asana tasks assignee 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": null,
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
  Object {
    "model": "tms_TaskAssignment",
    "record": Object {
      "assignee": Object {
        "source": "Asana",
        "uid": "7440298482110",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
]
`;

exports[`asana tasks basic task 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": null,
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
]
`;

exports[`asana tasks completed task converts to status Done 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": Object {
        "category": "Done",
        "detail": "completed",
      },
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
]
`;

exports[`asana tasks memberships 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": null,
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
  Object {
    "model": "tms_TaskProjectRelationship",
    "record": Object {
      "project": Object {
        "source": "Asana",
        "uid": "1205346703408259",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
  Object {
    "model": "tms_TaskBoardRelationship",
    "record": Object {
      "board": Object {
        "source": "Asana",
        "uid": "1205346703408260",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
]
`;

exports[`asana tasks parent 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": Object {
        "source": "Asana",
        "uid": "1205346703408261",
      },
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": null,
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
  Object {
    "model": "tms_TaskDependency",
    "record": Object {
      "blocking": false,
      "dependentTask": Object {
        "source": "Asana",
        "uid": "1205346703408261",
      },
      "fulfillingTask": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
]
`;

exports[`asana tasks status from custom_fields 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [
        Object {
          "name": "status",
          "value": "In Progress",
        },
      ],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
]
`;

exports[`asana tasks tags 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2023-08-24T15:52:00.014Z,
      "description": "Task 1 notes",
      "name": "Task 1",
      "parent": null,
      "points": null,
      "priority": null,
      "source": "Asana",
      "status": null,
      "statusChangedAt": 2023-08-25T20:59:25.575Z,
      "type": Object {
        "category": "Task",
        "detail": "task",
      },
      "uid": "1205346703408262",
      "updatedAt": 2023-08-25T20:59:25.575Z,
      "url": "https://app.asana.com/0/1205346703408259/1205346703408262",
    },
  },
  Object {
    "model": "tms_TaskTag",
    "record": Object {
      "label": Object {
        "name": "tag1",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
  Object {
    "model": "tms_Label",
    "record": Object {
      "name": "tag1",
    },
  },
  Object {
    "model": "tms_TaskTag",
    "record": Object {
      "label": Object {
        "name": "tag2",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
  Object {
    "model": "tms_Label",
    "record": Object {
      "name": "tag2",
    },
  },
  Object {
    "model": "tms_TaskTag",
    "record": Object {
      "label": Object {
        "name": "tag2",
      },
      "task": Object {
        "source": "Asana",
        "uid": "1205346703408262",
      },
    },
  },
]
`;
